# catacomb

./: .gitignore  .mirror-sync  404.html  AGENTS.md  CLAUDE.md  Cargo.toml  HANDOFF.md  LICENSE  PKGBUILD  README.md  ROADMAP.md  SECURITY_AUDIT.md  anti-bot.html  architecture.html  catacomb.desktop  config.toml  downloading.html  first-run.html  installation.html  introduction.html  packaging.html  print.html  searcher-09f2665d.js  searchindex-4723df7c.js  toc-0334b8fe.js  toc.html  troubleshooting.html  youtube-backup.desktop
.forgejo/workflows/: docs.yml  release.yml  test.yml
android/: .gitignore  README.md  build-apk.sh  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/catacomb/spike/: CatacombApp.kt  Common.kt  DownloadScreen.kt  Engine.kt  FilesScreen.kt  MainActivity.kt  Prefs.kt  RustCore.kt  SettingsScreen.kt  Theme.kt
android/app/src/main/res/values/: themes.xml
android/demo/: AndroidManifest.xml  README.md  build-apk.sh
android/demo/src/com/catacomb/spike/: MainActivity.java  RustCore.java
android/rust/catacomb_core/: Cargo.toml  build.sh
android/rust/catacomb_core/src/: lib.rs
docs/: PACKAGING.md  book.toml  tartube-spec.md
docs/src/: SUMMARY.md  anti-bot.md  architecture.md  downloading.md  first-run.md  installation.md  introduction.md  packaging.md  theming.md  troubleshooting.md
docs/superpowers/plans/: 2026-06-27-android-engine-feasibility-research.md  2026-06-27-desktop-visual-refresh.md  2026-07-09-library-snapshot-instant-startup.md  2026-07-10-federation-editor-phase2-kind-aware.md  2026-07-10-peertube-client-backend.md  2026-07-12-peertube-browse-archive.md
docs/superpowers/specs/: 2026-06-27-android-engine-feasibility-findings.md  2026-06-27-android-engine-feasibility-research.md  2026-06-27-android-stage1-prototype-plan.md  2026-06-27-desktop-visual-refresh-design.md  2026-07-05-mobile-scaling-and-pwa-design.md  2026-07-07-runtime-performance-pass-design.md  2026-07-09-library-snapshot-instant-startup-design.md  2026-07-10-federation-editor-phase2-kind-aware-design.md  2026-07-10-federation-remote-editor-design.md  2026-07-10-peertube-client-backend-design.md  2026-07-12-peertube-browse-archive-design.md  q1-yt-dlp-android-report.md  q2-js-runtime-android-report.md  q3-pot-android-report.md  q4-rust-jni-android-report.md
scripts/: package.sh  publish-docs.sh
src/: app.rs  autotag.rs  config.rs  crash.rs  database.rs  disk_space.rs  download_options.rs  downloader.rs  error_class.rs  feed.rs  fingerprint.rs  library.rs  main.rs  maintenance.rs  peertube.rs  platform.rs  plex.rs  pot_provider.rs  remote.rs  stats.rs  theme.rs  tray.rs  util.rs  vtt.rs  web.rs  ytdlp_bin.rs
src/web_ui/: index.html  login.html  manifest.webmanifest  sw.js
tests/: api.rs
yt-offline/: FETCH_HEAD  config  packed-refs
yt-offline/objects/pack/: pack-6897c4074306e747fd2470903fe96dc346968c44.idx  pack-6897c4074306e747fd2470903fe96dc346968c44.pack  pack-6897c4074306e747fd2470903fe96dc346968c44.rev
yt-offline/refs/heads/: main
